Fixed bug with scale on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -2099,6 +2099,13 @@ footer {
 }
 
 @media (max-width: 992px) {
+    /* -------------------------------------------------
+        Base styles
+       ------------------------------------------------- */
+    html {
+        overflow-x: hidden;
+    }
+
     .container,
     .container__section {
         max-width: 100%;
